<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.northcoders.exhibition_curator_android.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.northcoders.exhibition_curator_android.ui.my_collections.MyCollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/navigation_museums"
        android:name="com.northcoders.exhibition_curator_android.ui.museums.MuseumsFragment"
        android:label="@string/title_museums"
        tools:layout="@layout/fragment_museums" />
</navigation>